--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .logotipo{
-		width: 30px;
+		width: 60px;
 		height: auto;
 	}
 #social{
@@ -30,7 +30,13 @@
 
 	text-align: center;
 	background-color: white;
-	padding: 80px 0;
+	padding: 50px 0;
+}
+
+#institucional p{
+	color: #363636;
+	font-size: 14pt;
+	font-weight: bold;
 }
 
 .dir{
@@ -39,14 +45,23 @@
 }
 
 .esq{
-	background-color: grey;
+	background-color: #ADFF2F;
 	padding: 10px 0;
 }
 
 #atv1{
 	text-align: center;
 	background-color: white;
-	padding: 80px 0;
+	padding: 30px 0;
+}
+.sapato01{
+	height: 150px;
+}
+.sapato02{
+	height: 150px;
+}
+.sapato03{
+	height: 150px;
 }
 #blog{
 	padding-left: 42px;
